feat: add plain workflow web interface
